--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,14 +1,50 @@
-﻿<Window x:Class="Zvonilka.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Zvonilka"
-        mc:Ignorable="d"
-        Title="MainWindow" 
-        Height="450" 
-        Width="800">
-    <Grid>
+﻿<Window
+    x:Class="Zvonilka.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Zvonilka"
+    mc:Ignorable="d"
+    Title="Звонилка | Главное меню" 
+    Height="800" 
+    Width="800"
+    Icon="/Pepper.png" 
+    WindowStartupLocation="CenterScreen">
+    
+    <Grid ShowGridLines="True">
+        
+        <Grid.RowDefinitions>
+            
+            <RowDefinition Height="auto"/>
+            
+        </Grid.RowDefinitions>
 
+        <Grid ShowGridLines="True">
+            
+            <Grid.ColumnDefinitions>
+                
+                <ColumnDefinition/>
+                
+                <ColumnDefinition Width="auto"/>
+                
+            </Grid.ColumnDefinitions>
+            
+            <Label
+                Name="AppName"
+                Content="Звонилка"
+                FontSize="30"
+                Grid.Column="0"
+                Margin="10, 10, 10, 10"/>
+            
+            <Image
+                Grid.Column="1" 
+                Source="/Pepper.png"
+                Height="50px"
+                Margin="10, 10, 10, 10"/>
+            
+        </Grid>  
+        
     </Grid>
+    
 </Window>
