--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,40 +11,64 @@
     Width="800"
     Icon="/Pepper.png" 
     WindowStartupLocation="CenterScreen">
-    
-    <Grid ShowGridLines="True">
-        
+    <Grid Background="{DynamicResource {x:Static SystemColors.ActiveCaptionTextBrushKey}}">
         <Grid.RowDefinitions>
-            
             <RowDefinition Height="auto"/>
-            
+            <RowDefinition/>
         </Grid.RowDefinitions>
-
-        <Grid ShowGridLines="True">
-            
+        <Grid 
+            Grid.Row="0"
+            Margin="0, 0, 0, 1">
+            <Grid.Background>
+                <LinearGradientBrush 
+                    EndPoint="0.5,1" 
+                    StartPoint="0.5,0" 
+                    SpreadMethod="Pad">
+                    <LinearGradientBrush.RelativeTransform>
+                        <TransformGroup>
+                            <ScaleTransform 
+                                CenterY="0.5" 
+                                CenterX="0.5"/>
+                            <SkewTransform 
+                                CenterX="0.5"
+                                CenterY="0.5"/>
+                            <RotateTransform 
+                                Angle="-90" 
+                                CenterX="0.5" CenterY="0.5"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </LinearGradientBrush.RelativeTransform>
+                    <GradientStop Color="#FFE6FF00"/>
+                    <GradientStop 
+                        Color="#FFFFFFFF" 
+                        Offset="0.997"/>
+                </LinearGradientBrush>
+            </Grid.Background>
             <Grid.ColumnDefinitions>
-                
-                <ColumnDefinition/>
-                
                 <ColumnDefinition Width="auto"/>
-                
+                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            
-            <Label
-                Name="AppName"
-                Content="Звонилка"
-                FontSize="30"
-                Grid.Column="0"
-                Margin="10, 10, 10, 10"/>
-            
             <Image
-                Grid.Column="1" 
+                Grid.Column="0" 
                 Source="/Pepper.png"
                 Height="50px"
                 Margin="10, 10, 10, 10"/>
-            
-        </Grid>  
-        
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                <Label
+                    Content="Звонилка"
+                    FontSize="30"
+                    Grid.Row="0"/>
+                <Label
+                    Content="Приложение для управления школьными звонками."
+                    FontSize="20"
+                    Grid.Row="1"
+                    Margin="10, 0, 0, 0"/>
+            </Grid>
+        </Grid>
+        <Grid Grid.Row="1" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
     </Grid>
-    
 </Window>
